tests/transpiler/x/zig/list_index.zig
// Generated by Mochi Zig transpiler on 2025-07-21 11:40 +0000
const std = @import("std");

pub fn main() void {
    const xs = [_]i64{10, 20, 30};
    try std.io.getStdOut().writer().print("{c}\n", .{xs[1]});
}
